query-lang/src/main/antlr/Expr.g4
grammar Expr;
import CommonLexeRules;
prog: stat+ ;
stat: expr NEWLINE          # printExpr
    | ID '=' expr NEWLINE   # assign
    | NEWLINE               # blank
    ;

expr: expr op=('*'|'/') expr   # MulDiv
      | expr op=('+'|'-') expr # AddSub
      | INT                 # int
      | ID                  # id
      | '(' expr ')'        # parens
      ;

MUL: '*' ;
DIV: '/' ;
ADD: '+' ;
SUB: '-' ;
